# quadratically

./: .gitignore  Handle.hs  Main.hs  README.md  Validate.hs  database.db  default.nix  derivation.nix  install.txt  quadratically.cabal  shell.nix
checker/: README.md  checker.py  keygen.py
