name:                quadratically
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
license:             BSD3
author:              "d86leader"
maintainer:          "d86leader@mail.com"

executable app-exe
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language: Haskell2010
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall -Wcompat
  build-depends: base
               , containers
               , directory
               , network >=2.0 && <3.0.0.0
               , unix
